# tuda

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.json  email_parser.py  gradlew  gradlew.bat  intel_core.py  main.py  pyproject.toml  settings.gradle
.github/workflows/: main.yml  python-ci.yml
TUDA/: README.md  config.json  email_parser.py  intel_core.py  main.py
TUDA/daemon/: watcher.py
TUDA/plugins/: example.py
TUDA/ui/: server.py
TUDA/ui/templates/: index.html
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kaomoji/overlay/: KaomojiAccessibilityService.kt  MainActivity.kt  OverlayService.kt
app/src/main/java/com/kaomoji/overlay/ai/: BackendRoutingConfig.kt  DeviceMonitor.kt  IntelligenceTier.kt  PersonaCore.kt  PersonaStore.kt  StateController.kt  (+1 more)
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
backend/: __init__.py  api.py  check_hardware.py  consciousness.py  storage.py
backend/plugins/: __init__.py  base.py  ner_detector.py  spam_detector.py
daemon/: watcher.py
plugins/: __init__.py
src/components/: SystemObservations.tsx
src/screens/: MessageListScreen.tsx  OnboardingScreen.tsx
tests/: test_api.py  test_gmail_service.py  test_plugins.py  test_storage.py
tuda/: __init__.py  api.py  config.py  consciousness.py  gmail_service.py  resource_governor.py  storage.py  trust_engine.py
tuda/models/: __init__.py  state.py
tuda/plugins/: __init__.py  base.py  manager.py  spam_detector.py
ui/: server.py
ui/templates/: index.html
(+7 files in other folders)
